@@ -70,8 +70,10 @@ package Paws::API::ServiceToClass;
     marketplacecommerceanalytics => 'MarketplaceCommerceAnalytics',
     meteringmarketplace => 'MarketplaceMetering',
     monitoring => 'CloudWatch',
+    mturk => 'MTurk',
     opsworks => 'OpsWorks',
     opsworkscm => 'OpsWorksCM',
+    organizations => 'Organizations',
     pinpoint => 'Pinpoint',
     polly => 'Polly',
     rds => 'RDS',
